<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.danielpan.youtubelike.HomeActivity">
    <item
        android:id="@+id/home_action_search"
        android:icon="@drawable/home_action_search"
        android:title="@string/home_action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/home_action_settings"
        android:icon="@drawable/home_action_settings"
        android:title="@string/home_action_settings" />
    <item
        android:id="@+id/home_action_privacy_policy"
        android:title="@string/home_action_privacy_policy" />
    <item
        android:id="@+id/home_action_help_feedback"
        android:title="@string/home_action_help_feedback" />
    <item
        android:id="@+id/home_action_sign_out"
        android:title="@string/home_action_sign_out" />
</menu>
